--- a/src/main/webapp/editExam.xhtml
+++ b/src/main/webapp/editExam.xhtml
@@ -8,7 +8,7 @@
 
     <ui:define name="title">
         <h:form>
-            <h:link value="Courses" outcome="listCourses" /> -> <h:link value="#{courseController.selected.name}" outcome="editCourse" /> -> <h:link value="#{courseController.selected.name}" outcome="editCourse" /> -> <h:link value="#{courseController.selectedExam.name}" outcome="editExam" />
+            <h:link value="Courses" outcome="listCourses" /> -> <h:link value="#{courseController.selected.name}" outcome="editCourse" /> -> <h:link value="#{courseController.selectedExam.name}" outcome="editExam" />
         </h:form>
     </ui:define>
     
