--- a/src/main/webapp/editObligTask.xhtml
+++ b/src/main/webapp/editObligTask.xhtml
@@ -8,7 +8,7 @@
 
     <ui:define name="title">
         <h:form>
-            <h:link value="Courses" outcome="listCourses" /> -> <h:link value="#{courseController.selected.name}" outcome="editCourse" /> -> <h:link value="#{courseController.selected.name}" outcome="editCourse" /> -> <h:link value="#{courseController.selectedObligatoryTask.name}" outcome="editObligTask" />
+            <h:link value="Courses" outcome="listCourses" /> -> <h:link value="#{courseController.selected.name}" outcome="editCourse" /> -> <h:link value="#{courseController.selectedObligatoryTask.name}" outcome="editObligTask" />
         </h:form>
     </ui:define>
     
