--- a/src/main/webapp/editTask.xhtml
+++ b/src/main/webapp/editTask.xhtml
@@ -8,7 +8,7 @@
 
     <ui:define name="title">
         <h:form>
-            <h:link value="Courses" outcome="listCourses" /> -> <h:link value="#{courseController.selected.name}" outcome="editCourse" /> -> <h:link value="#{courseController.selected.name}" outcome="editCourse" /> -> <h:link value="#{courseController.selectedTheme.name}" outcome="editTheme" /> -> <h:link value="#{courseController.selectedTask.name}" outcome="editTask" />
+            <h:link value="Courses" outcome="listCourses" /> -> <h:link value="#{courseController.selected.name}" outcome="editCourse" /> -> <h:link value="#{courseController.selectedTheme.name}" outcome="editTheme" /> -> <h:link value="#{courseController.selectedTask.name}" outcome="editTask" />
         </h:form>
     </ui:define>
     
