--- a/src/main/webapp/editObligTask.xhtml
+++ b/src/main/webapp/editObligTask.xhtml
@@ -23,8 +23,8 @@
                     </p:column>
                 </p:dataTable>
             </p:fieldset>
-            <p:commandButton value="Save" action="#{courseController.editObligatoryTask()}"/>
-            <p:commandButton value="Delete" action="#{courseController.removeObligatoryTask(selectedObligatoryTask)}"/>
+            <h:commandLink value="Save" action="#{courseController.editObligatoryTask()}"/>
+            <h:commandLink value="Delete" action="#{courseController.removeObligatoryTask(selectedObligatoryTask)}"/>
         </h:form>
     </ui:define>
     
