--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -5,23 +5,12 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title><ui:insert name="title" /></title>
-        <link rel="stylesheet" type="text/css" href="/WareHouseProject/css/css.css" />
+        <link rel="stylesheet" type="text/css" href="/muldvarp/css/css.css" />
         <ui:insert name="extrascript" />
     </h:head>
     <h:body>
         <div id="container">
-            <div id="news">
-                <div id="login" style="position: absolute; top: 10px; right:160px;">
-                    
-                </div>
-                <div id="help" style="position: absolute; right: 10px; top: 10px;">
-                    <h:form>
-                        <h:commandButton action="/help" value="Help" />
-                    </h:form>
-                    
-                </div>
                 <h1><ui:insert name="title" /></h1>
-            </div>
             <div id="center">
                 <div id="mainsingle">
                     <ui:insert name="mainsingle" />
