--- a/src/main/webapp/editTheme.xhtml
+++ b/src/main/webapp/editTheme.xhtml
@@ -32,7 +32,7 @@
                                 <h:outputText value="#{task.done}" />
                             </p:column>
                             <p:column headerText="Done">  
-                                <p:commandButton value="Delete" action="#{courseController.removeTask(task)}" update="taskTable"/>
+                                <h:commandLink value="Delete" action="#{courseController.removeTask(task)}"/>
                             </p:column>
                         </p:dataTable>
                         <p:row>
@@ -46,8 +46,8 @@
                     </p:column>
                 </p:dataTable>
             </p:fieldset>
-            <p:commandButton value="Save" action="#{courseController.editTheme()}"/>
-            <p:commandButton value="Delete" action="#{courseController.removeTheme(theme)}"/>
+            <h:commandLink value="Save" action="#{courseController.editTheme()}"/>
+            <h:commandLink value="Delete" action="#{courseController.removeTheme(theme)}"/>
         </h:form>
     </ui:define>
     
