--- a/src/main/webapp/editCourse.xhtml
+++ b/src/main/webapp/editCourse.xhtml
@@ -15,53 +15,55 @@
     <ui:define name="mainsingle">
         <h:form id="courseForm">
             <p:fieldset legend="#{courseController.selected.name}">
-                <div style="float:right; width: 200px;">
-                    <h:commandLink value="Save" action="#{courseController.editCourse()}"/> <br />
-                    <h:commandLink value="New Revision" action="#{courseController.addNewRevCourse()}"/> <br />
-                    <h:commandLink value="Delete" action="#{courseController.removeCourse()}"/>
-                </div>
-                <div style="float:left; width: 500px;">
-                    <div class="column">
-                        <div class="column_left">
-                            <h:outputText value="Name: " />
+                <div style="width:1100px">
+                    <div style="float:left; width: 500px;">
+                        <div>
+                            <div class="column_left">
+                                <h:outputText value="Name: " />
+                            </div>
+                            <div class="column_right">
+                                <h:inputText value="#{courseController.selected.name}" />
+                            </div>
                         </div>
-                        <div class="column_right">
-                            <h:inputText value="#{courseController.selected.name}" />
+                        <div>
+                            <div class="column_left">
+                                <h:outputText value="Detail: " />
+                            </div>
+                            <div class="column_right">
+                                <h:inputText value="#{courseController.selected.detail}" />
+                            </div>
                         </div>
-                    </div>
-                    <div class="column">
-                        <div class="column_left">
-                            <h:outputText value="Detail: " />
-                        </div>
-                        <div class="column_right">
-                            <h:inputText value="#{courseController.selected.detail}" />
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="column_left">
-                            <h:outputText value="Image url: " />
-                        </div>
-                        <div class="column_right">
-                            <h:inputText value="#{courseController.selected.imageurl}" />
+                        <div>
+                            <div class="column_left">
+                                <h:outputText value="Image url: " />
+                            </div>
+                            <div class="column_right">
+                                <h:inputText value="#{courseController.selected.imageurl}" />
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div style="float:left; width:300px;">
-                    <div class="column">
-                        <div class="column_left">
-                            <h:outputText value="Revision: " />
+                    <div style="float:left; width:400px;">
+                        <div>
+                            <div class="column_left">
+                                <h:outputText value="Revision: " />
+                            </div>
+                            <div class="column_right">
+                                <h:outputText value="#{courseController.selected.revision}" />
+                            </div>
                         </div>
-                        <div class="column_right">
-                            <h:outputText value="#{courseController.selected.revision}" />
+                        <div>
+                            <div class="column_left">
+                                <h:outputText value="Revision Date: " />
+                            </div>
+                            <div class="column_right">
+                                <h:outputText value="#{courseController.selected.revision_date}" />
+                            </div>
                         </div>
                     </div>
-                    <div class="column">
-                        <div class="column_left">
-                            <h:outputText value="Revision Date: " />
-                        </div>
-                        <div class="column_right">
-                            <h:outputText value="#{courseController.selected.revision_date}" />
-                        </div>
+                    <div style="float:left; width: 200px;">
+                        <h:commandLink value="Save" action="#{courseController.editCourse()}"/> <br />
+                        <h:commandLink value="New Revision" action="#{courseController.addNewRevCourse()}"/> <br />
+                        <h:commandLink value="Delete" action="#{courseController.removeCourse()}"/>
                     </div>
                 </div>
                 <div style="clear:both;" />
