--- a/src/main/webapp/listCourses.xhtml
+++ b/src/main/webapp/listCourses.xhtml
@@ -27,7 +27,7 @@
                     </p:column>
                 </p:dataTable>          
             </p:fieldset>
-            <h:commandLink value="New Course" action="#{courseController.setSelected(null)}" update="courseTable"/>
+            <h:commandLink value="New Course" action="#{courseController.setSelected(null)}" />
             <p:commandButton value="Make testdata" action="#{courseController.makeTestData()}" update="courseTable"/>
         </h:form>
     </ui:define>
