Minor changes to menu.

--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -11,6 +11,7 @@
         <li><h:commandLink action="listCourses" value="Courselist" /></li>
         <li><h:commandLink action="newArticle" value="New Article" /></li>
         <li><h:commandLink action="newLibraryItem" value="New Document" /></li>
+        <li><h:commandLink action="newVideo" value="VideoTest" /></li>
     </ul>
 </h:form>
 </ui:composition>
