--- a/src/main/webapp/editTask.xhtml
+++ b/src/main/webapp/editTask.xhtml
@@ -21,6 +21,16 @@
                     <p:column headerText="Name">  
                         <h:inputText value="#{task.name}" />
                     </p:column>
+                    <p:column headerText="Type">  
+                        <h:selectOneListbox headerText="Content Type">
+                            <f:selectItem id="item1" itemLabel="External" itemValue="1" />
+                            <f:selectItem id="item2" itemLabel="Video" itemValue="2" />
+                            <f:selectItem id="item3" itemLabel="PDF" itemValue="3" />                            
+                        </h:selectOneListbox>
+                    </p:column>
+                    <p:column headerText="Content URL">  
+                        <h:inputText value="#{task.content_url}" />
+                    </p:column>
                 </p:dataTable>
             </p:fieldset>
             <h:commandLink value="Save" action="#{courseController.editTask()}"/>
