--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -5,6 +5,7 @@
     xmlns:p="http://primefaces.prime.com.tr/ui">
 <h:form>
     <ul>
+        <li><a href="http://master.uials.no:8080/muldvarp/resources/programme">Programme REST</a></li>
         <li><a href="http://master.uials.no:8080/muldvarp/resources/course">Course REST</a></li>
         <li><a href="http://master.uials.no:8080/muldvarp/resources/video">Video REST</a></li>
         <li><a href="http://master.uials.no:8080/muldvarp/resources/library">Library REST</a></li>
