--- a/src/main/webapp/admin/editCourse.xhtml
+++ b/src/main/webapp/admin/editCourse.xhtml
@@ -49,7 +49,7 @@
                             <div class="column_right">
                                 <h:selectOneMenu value="#{courseController.selected.programme}">
                                     
-                                    <f:selectItems value="#{programmeController.programmes}">
+                                    <f:selectItems value="#{programmeController.programmes}"/>
                                     
                                 </h:selectOneMenu>    
                             </div>
