Moved all edit xhtml files to admin folder and set security constraint, started work on post rest method

--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -8,10 +8,10 @@
         <li><a href="http://master.uials.no:8080/muldvarp/resources/course">Course REST</a></li>
         <li><a href="http://master.uials.no:8080/muldvarp/resources/video">Video REST</a></li>
         <li><a href="http://master.uials.no:8080/muldvarp/resources/library">Library REST</a></li>
-        <li><h:commandLink action="listCourses" value="Courselist" /></li>
-        <li><h:commandLink action="newArticle" value="New Article" /></li>
-        <li><h:commandLink action="newLibraryItem" value="New Document" /></li>
-        <li><h:commandLink action="newVideo" value="VideoTest" /></li>
+        <li><a href="/muldvarp/faces/admin/listCourses">CourseList</a></li>
+        <li><a href="/muldvarp/faces/admin/newArticle">New Article</a></li>
+        <li><a href="/muldvarp/faces/admin/newLibraryItem">New Document</a></li>
+        <li><a href="/muldvarp/faces/admin/newVideo">VideoTest</a></li>
     </ul>
 </h:form>
 </ui:composition>
