Fixed capitalization typo.

--- a/src/main/webapp/admin/newVideo.xhtml
+++ b/src/main/webapp/admin/newVideo.xhtml
@@ -8,7 +8,7 @@
 
 
 
-    <ui:define name="Title">
+    <ui:define name="title">
         Create and Add new Video        
     </ui:define>
         
