--- a/src/main/webapp/editDocument.xhtml
+++ b/src/main/webapp/editDocument.xhtml
@@ -17,37 +17,40 @@
                     </f:facet>  
 
                         <h:outputLabel value="Title: " />
-                        <h:outputLabel value="#{libraryController.libraryItem.title}" />
+                        <h:outputLabel value="#{libraryController.selected.title}" />
 
                         <h:outputLabel value="Alternate title: " />
-                        <p:inputText value="#{libraryController.libraryItem.alternateTitle}"/>
+                        <h:outputLabel value="#{libraryController.selected.alternateTitle}"/>
 
                         <h:outputLabel value="Author: " />
-                        <p:inputText value="#{libraryController.libraryItem.author}"/>
+                        <h:outputLabel value="#{libraryController.selected.author}"/>
 
                         <h:outputLabel value="Co-Author: " />
-                        <p:inputText value="#{libraryController.libraryItem.coAuthor}"/>
+                        <h:outputLabel value="#{libraryController.selected.coAuthor}"/>
 
                         <h:outputLabel value="Published: " />
-                        <p:inputText value="#{libraryController.libraryItem.published}"/>
+                        <h:outputLabel value="#{libraryController.selected.published}"/>
+                        
+                        <h:outputLabel value="Uploaded: " />
+                        <h:outputLabel value="#{libraryController.selected.uploaded}"/>
 
                         <h:outputLabel value="Number of pages: " />
-                        <p:inputText value="#{libraryController.libraryItem.pageNo}"/>
+                        <h:outputLabel value="#{libraryController.selected.pageNo}"/>
 
                         <h:outputLabel value="Icon URL: " />
-                        <p:inputText value="#{libraryController.libraryItem.iconURL}"/>
+                        <h:outputLabel value="#{libraryController.selected.iconURL}"/>
 
                         <h:outputLabel value="Thumb URL: " />
-                        <p:inputText value="#{libraryController.libraryItem.thumbURL}"/>
+                        <h:outputLabel value="#{libraryController.selected.thumbURL}"/>
 
                         <h:outputLabel value="Document URL: " />
-                        <p:inputText value="#{libraryController.libraryItem.URL}"/>
+                        <h:outputLabel value="#{libraryController.selected.URL}"/>
 
                         <h:outputLabel value="Summary: " /> 
-                        <p:inputTextarea value="#{libraryController.libraryItem.summary}" rows="5" cols="30"/>
+                        <h:outputLabel value="#{libraryController.selected.summary}"/>
   
                     <f:facet name="footer">  
-                        <p:commandButton  id="submitButton" value="save" action="listDocuments?faces-redirect=true" actionListener="#{libraryController.addLibraryItem()}" ajax="false" icon="ui-icon-check" style="margin:0"/>
+                        <p:commandButton id="deleteButton" value="Delete document" actionListener="#{libraryController.deleteSelectedLibraryItem()}" ajax="false" action="listDocuments?faces-redirect=true" />
                     </f:facet>
                 </p:panelGrid>  
             </p:fieldset>
