--- a/src/main/webapp/listDocuments.xhtml
+++ b/src/main/webapp/listDocuments.xhtml
@@ -17,7 +17,8 @@
                     var="LibraryItem">
                     <p:column headerText="Name">  
                         <h:commandLink 
-                            action="#{libraryController.selected(selected)}" 
+                            actionListener="#{libraryController.select(LibraryItem)}"
+                            action="editDocument?faces-redirect=true}"
                             value="#{LibraryItem.title}" />
                     </p:column>
                     <p:column headerText="Delete">  
