--- a/src/main/webapp/listDocuments.xhtml
+++ b/src/main/webapp/listDocuments.xhtml
@@ -11,6 +11,7 @@
     <ui:define name="right">
         <h:form id="docForm">                
             <p:fieldset legend="Documents">
+                <p:messages id="messages" showDetail="true" autoUpdate="true"/>
                 <p:dataTable
                     id="documentTable"
                     value="#{libraryController.libraryItems}" 
@@ -22,11 +23,12 @@
                             value="#{LibraryItem.title}" />
                     </p:column>
                     <p:column headerText="Delete">  
-                        <p:commandButton  id="deleteButton" value="Delete document" action="#{libraryController.deleteLibraryItem(LibraryItem)}" ajax="false"/>
+                        <p:commandButton  id="deleteButton" value="Delete document" action="#{libraryController.deleteLibraryItem(LibraryItem)}" actionListener="#{libraryController.addInfo(1, LibraryItem)}" ajax="false"/>
                     </p:column>
                 </p:dataTable>          
             </p:fieldset>
-            <p:commandButton value="Make testdata" action="#{libraryController.makeTestData()}" update="documentTable"/>
+            <p:commandButton value="Make testdata" action="#{libraryController.makeTestData()}" actionListener="#{libraryController.addInfo(1)}" update="documentTable"/>
+            <p:commandButton value="Home" action="index?faces-redirect=true"/>
             <p:commandButton value="New document" action="newDocument?faces-redirect=true"/>
         </h:form>
     </ui:define>
