--- a/src/main/webapp/admin/editExam.xhtml
+++ b/src/main/webapp/admin/editExam.xhtml
@@ -13,7 +13,8 @@
     </ui:define>
     
     <ui:define name="mainsingle">
-        <h:form id="examForm">                
+        <h:form id="examForm">    
+            <p:messages id="messages" showDetail="true" autoUpdate="true"/>
             <p:fieldset legend="#{courseController.selectedExam.name}">
                 <p:dataTable 
                     value="#{courseController.selectedExam}" 
@@ -23,7 +24,7 @@
                     </p:column>
                 </p:dataTable>
             </p:fieldset>
-            <h:commandLink value="Save" action="#{courseController.editExam()}"/>
+            <h:commandLink value="Save" action="#{courseController.editExam()}" actionListener="#{courseController.addInfo(1)}"/>
             <h:commandLink value="Delete" action="#{courseController.removeExam(selectedExam)}"/>
         </h:form>
     </ui:define>
