--- a/src/main/webapp/admin/listCourses.xhtml
+++ b/src/main/webapp/admin/listCourses.xhtml
@@ -11,7 +11,8 @@
     </ui:define>
     
     <ui:define name="right">
-        <h:form id="productForm">                
+        <h:form id="productForm">
+            <p:messages id="messages" showDetail="true" autoUpdate="true"/>
             <p:fieldset legend="Courses">
                 <p:dataTable
                     id="courseTable"
