Changed some links to buttons, fixed exam delete bug

--- a/src/main/webapp/admin/editExam.xhtml
+++ b/src/main/webapp/admin/editExam.xhtml
@@ -24,8 +24,8 @@
                     </p:column>
                 </p:dataTable>
             </p:fieldset>
-            <h:commandLink value="Save" action="#{courseController.editExam()}" actionListener="#{courseController.addInfo(1)}"/>
-            <h:commandLink value="Delete" action="#{courseController.removeExam(selectedExam)}"/>
+            <p:commandButton value="Save" action="#{courseController.editExam()}"/>
+            <p:commandButton value="Delete" action="#{courseController.removeExam(selectedExam)}"/>
         </h:form>
     </ui:define>
     
