--- a/src/main/webapp/admin/editObligTask.xhtml
+++ b/src/main/webapp/admin/editObligTask.xhtml
@@ -24,8 +24,8 @@
                     </p:column>
                 </p:dataTable>
             </p:fieldset>
-            <h:commandLink value="Save" action="#{courseController.editObligatoryTask()}" actionListener="#{courseController.addInfo(1)}"/>
-            <h:commandLink value="Delete" action="#{courseController.removeObligatoryTask(selectedObligatoryTask)}"/>
+            <p:commandButton value="Save" action="#{courseController.editObligatoryTask()}"/>
+            <p:commandButton value="Delete" action="#{courseController.removeObligatoryTask(selectedObligatoryTask)}"/>
         </h:form>
     </ui:define>
     
