--- a/src/main/webapp/newDocument.xhtml
+++ b/src/main/webapp/newDocument.xhtml
@@ -41,7 +41,14 @@
                         <p:inputText value="#{libraryController.libraryItem.thumbURL}"/>
 
                         <h:outputLabel value="Document URL: " />
-                        <p:inputText value="#{libraryController.libraryItem.URL}"/>
+                        <h:form enctype="multipart/form-data">  
+                            <p:fileUpload fileUploadListener="#{libraryController.handleFileUpload(event)}"  
+                                    mode="advanced"   
+                                    update="messages"  
+                                    sizeLimit="1000000"   
+                                    allowTypes="/(\.|\/)(pdf|docx|odt)$/"/>
+                            <p:growl id="messages" showDetail="true" />  
+                        </h:form>
 
                         <h:outputLabel value="Summary: " /> 
                         <p:inputTextarea value="#{libraryController.libraryItem.summary}" rows="5" cols="30"/>
