Started work on programme implementation

--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -13,6 +13,7 @@
         <li><a href="http://master.uials.no:8080/muldvarp/resources/video">Video REST</a></li>
         <li><a href="http://master.uials.no:8080/muldvarp/resources/library">Library REST</a></li>
         <li><a href="/muldvarp/faces/admin/listCourses.xhtml">CourseList</a></li>
+        <li><a href="/muldvarp/faces/admin/listProgramme.xhtml">ProgrammeList</a></li>
         <li><a href="/muldvarp/faces/admin/newArticle.xhtml">New Article</a></li>
         <li><a href="/muldvarp/faces/admin/newVideo.xhtml">VideoTest</a></li>
         <li><a href="/muldvarp/faces/listDocuments.xhtml">Documents</a></li>
