--- a/src/main/webapp/admin/editProgramme.xhtml
+++ b/src/main/webapp/admin/editProgramme.xhtml
@@ -38,7 +38,7 @@
                                 <h:outputText value="Courses in program: " />
                             </div>
                             <div class="column_right">
-                                <p:dataTable id="themeTable"
+                                <p:dataTable id="programmeTable"
                                     value="#{programmeController.selected.courses}" 
                                     var="course">
                                     <p:column headerText="Name">  
