--- a/src/main/webapp/admin/editQuestion.xhtml
+++ b/src/main/webapp/admin/editQuestion.xhtml
@@ -13,39 +13,32 @@
     </ui:define>
     
     <ui:define name="mainsingle">
-        <h:form id="themeForm">        
+        <h:form id="questForm">        
             <p:messages id="messages" showDetail="true" autoUpdate="true"/>
-            <p:fieldset legend="#{courseController.selectedTask.name}">
+            <p:fieldset legend="#{courseController.selectedQuestion.name}">
                 <p:dataTable 
-                    value="#{courseController.selectedTask}" 
-                    var="task">
+                    value="#{courseController.selectedQuestion}" 
+                    var="q">
                     <p:column headerText="Name">  
-                        <h:inputText value="#{task.name}" />
+                        <h:inputText value="#{q.name}" />
                     </p:column>
-                    <p:column headerText="Type">  
-                        <h:selectOneListbox headerText="Content Type">
-                            <f:selectItem id="item1" itemLabel="External" itemValue="1" />
-                            <f:selectItem id="item2" itemLabel="Video" itemValue="2" />
-                            <f:selectItem id="item3" itemLabel="PDF" itemValue="3" />                            
-                        </h:selectOneListbox>
-                    </p:column>
-                    <p:column headerText="Content URL">  
-                        <h:inputText value="#{task.content_url}" />
-                    </p:column>
-                    <p:column headerText="Questions">  
-                        <p:dataTable id="questTable"
-                            value="#{task.questions}" 
-                            var="q">
+                    <p:column headerText="Alternatives">  
+                        <p:dataTable id="altTable"
+                            value="#{q.alternatives}" 
+                            var="a">
                             <p:column headerText="Name">
-                                <h:commandLink value="#{q.name}" action="#{courseController.setSelectedQuestion(q)}"/>
+                                <h:commandLink value="#{a.name}" action="#{courseController.setAnswer(a)}"/>
                             </p:column>
                         </p:dataTable>
                         <p:column>  
-                            <h:inputText value="#{courseController.question.name}" />
+                            <h:inputText value="#{courseController.alternative.name}" />
                         </p:column> 
                         <p:column>
-                            <p:commandButton value="Add Question" action="#{courseController.addQuestion()}" update="questTable"/>
+                            <p:commandButton value="Add Alternative" action="#{courseController.addAlternative()}" update="altTable"/>
                         </p:column>
+                    </p:column>
+                    <p:column headerText="Answer">  
+                        <h:outputText value="#{q.answer.name}" />
                     </p:column>
                 </p:dataTable>
             </p:fieldset>
