--- a/src/main/webapp/admin/editQuestion.xhtml
+++ b/src/main/webapp/admin/editQuestion.xhtml
@@ -29,6 +29,9 @@
                             <p:column headerText="Name">
                                 <h:commandLink value="#{a.name}" action="#{courseController.setAnswer(a)}"/>
                             </p:column>
+                            <p:column>  
+                                <h:commandLink value="Delete" action="#{courseController.removeAlternative(a)}"/>
+                            </p:column>
                         </p:dataTable>
                         <p:column>  
                             <h:inputText value="#{courseController.alternative.name}" />
@@ -42,8 +45,7 @@
                     </p:column>
                 </p:dataTable>
             </p:fieldset>
-            <p:commandButton value="Save" action="#{courseController.editTask()}"/>
-            <p:commandButton value="Delete" action="#{courseController.removeTask(task)}"/>
+            <p:commandButton value="Save" action="#{courseController.editQuestion()}"/>
         </h:form>
     </ui:define>
     
