--- a/src/main/webapp/admin/editTask.xhtml
+++ b/src/main/webapp/admin/editTask.xhtml
@@ -26,7 +26,8 @@
                         <h:selectOneListbox value="#{task.contentType}">
                             <f:selectItem id="item1" itemLabel="External" itemValue="External" />
                             <f:selectItem id="item2" itemLabel="Video" itemValue="Video" />
-                            <f:selectItem id="item3" itemLabel="PDF" itemValue="PDF" />                            
+                            <f:selectItem id="item3" itemLabel="PDF" itemValue="PDF" />
+                            <f:selectItem id="item4" itemLabel="Quiz" itemValue="Quiz" />
                         </h:selectOneListbox>
                     </p:column>
                     <p:column headerText="Content URL">  
