Added smaller changes to the web site, and added a rest source for student videos.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -18,7 +18,7 @@
             <h:link outcome="listDocuments" >
                 <h:graphicImage value="img/Document-icon.png" />
             </h:link>
-            <h:link outcome="admin/newVideo" >
+            <h:link outcome="admin/listVideos" >
                 <h:graphicImage value="img/Movies-icon.png" />
             </h:link>
             <h:link outcome="admin/listCourses" >
