--- a/src/main/webapp/newDocument.xhtml
+++ b/src/main/webapp/newDocument.xhtml
@@ -42,7 +42,7 @@
 
                         <h:outputLabel value="Document URL: " />
                         <h:form enctype="multipart/form-data">  
-                            <p:fileUpload fileUploadListener="#{libraryController.handleFileUpload(event)}"  
+                            <p:fileUpload fileUploadListener="#{libraryController.handleFileUpload}"  
                                     mode="advanced"   
                                     update="messages"  
                                     sizeLimit="1000000"   
@@ -55,7 +55,8 @@
   
                     <f:facet name="footer">  
                         <p:commandButton id="back" value="Back" ajax="false" action="listDocuments?faces-redirect=true" />
-                        <p:commandButton  id="submitButton" value="save" action="listDocuments?faces-redirect=true" actionListener="#{libraryController.addLibraryItem()}" ajax="false" icon="ui-icon-check" style="margin:0"/>
+                        <p:commandButton id="submitButton" value="save" action="listDocuments?faces-redirect=true" 
+                                         actionListener="#{libraryController.addLibraryItem()}" ajax="false" icon="ui-icon-check" style="margin:0"/>
                     </f:facet>
                 </p:panelGrid>  
             </p:fieldset>
