--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -18,6 +18,8 @@
         <li><a href="/muldvarp/faces/admin/newArticle.xhtml">New Article</a></li>
         <li><a href="/muldvarp/faces/admin/newVideo.xhtml">VideoTest</a></li>
         <li><a href="/muldvarp/faces/listDocuments.xhtml">Documents</a></li>
+        <li><a href="/muldvarp/faces/listPeople.xhtml">Documents</a></li>
+        <li><a href="/muldvarp/faces/listArticles.xhtml">Documents</a></li>
         <li><a href="/muldvarp/faces/newPerson.xhtml">New Person</a></li>
     </ul>
 </h:form>
