--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -17,7 +17,7 @@
         <li><a href="/muldvarp/faces/admin/listProgramme.xhtml">ProgrammeList</a></li>
         <li><a href="/muldvarp/faces/admin/listVideos.xhtml">VideoList</a></li>
         <li><a href="/muldvarp/faces/admin/newArticle.xhtml">New Article</a></li>
-        <li><a href="/muldvarp/faces/admin/newVideo.xhtml">VideoTest</a></li>
+        <li><a href="/muldvarp/faces/admin/newVideo.xhtml">New Video</a></li>
         <li><a href="/muldvarp/faces/listDocuments.xhtml">Documents</a></li>
         <li><a href="/muldvarp/faces/newPerson.xhtml">New Person</a></li>
     </ul>
