Added testdata, fixed links on the front page, tied together video & course. TODO: Fix REST

--- a/src/main/webapp/admin/listVideos.xhtml
+++ b/src/main/webapp/admin/listVideos.xhtml
@@ -15,7 +15,7 @@
                 <p:fieldset legend="Search Functions">
                     <h:inputText id="searchInput" value="#{videoController.filterString}"/>
                     <p:commandButton value="Search" action="#{videoController.getNameFilteredVideos()}"  update="videoTable"/>
-                </p:fieldset>s
+                </p:fieldset>
                 <p:messages id="messages" showDetail="true" autoUpdate="true"/>
                 <p:dataTable
                     id="videoTable"
